--- a/schedule.css
+++ b/schedule.css
@@ -213,3 +213,21 @@
   border: none;
 }
 
+.today{
+  position: relative;
+  color: #FFFFFF;
+}
+
+.today::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  width: 30px;
+  height: 30px;
+  display: block;
+  background-color: red;
+  border-radius: 50%;
+  content: "";
+}
